# zlib-accel-public

./: CMakeLists.txt  README.md  common.cmake  iaa.cpp  iaa.h  logging.h  qat.cpp  qat.h  statistics.cpp  statistics.h  zlib_accel.cpp  zlib_accel.h
.github/workflows/: clang_tests.yml  tests.yml  tests_log_stats.yml
config/: config.cpp  config.h  config_reader.cpp  config_reader.h
fuzzing/: zlib_accel_fuzz.cpp
tests/: CMakeLists.txt  msan_skip.txt  test_utils.cpp  test_utils.h  zlib_accel_test.cpp
